--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,12 @@
     "com.unity.ide.rider": "3.0.18",
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.netcode.gameobjects": "1.7.0",
+    "com.unity.services.authentication": "3.1.0",
+    "com.unity.services.cloudsave": "3.0.0",
+    "com.unity.services.core": "1.12.0",
+    "com.unity.services.lobby": "1.1.0",
+    "com.unity.services.relay": "1.0.5",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
